static/css/booking.css
/* the book button should be align on ther right side of group but still need to consider the padding with the book-panel__group */
/* the layout of the delete button which should be wrap on the next line after the media size = mobile */
    /* Change the position in the mobile size */
    /* Need to check the meeting video to get the correct behaviour */
/* Sould check the attaction info spec => the margin between the location the corresponding under horizontal line */

.main{
    /* margin: auto; */
    box-sizing: border-box;
    /* padding-top: 40px; */
    padding-bottom: 40px;
}

.horizontal-line--basic-setting{
    border: 1px solid #E8E8E8;
    border-top: 0px;
}

.horizontal-line--top-setting{
    position: relative;
    top: 1px;
}

.horizontal-line--middle-setting{
    margin: 0;
}

.book-panel__text--title{
    font-family: Noto Sans TC;
    font-size: 19px;
    font-weight: 700;
    line-height: 16px;
    letter-spacing: 0em;
    text-align: left;
    color: #666666;
}

.book-panel__text--big{
    font-family: Noto Sans TC;
    font-size: 16px;
    font-weight: 700;
    line-height: 13px;
    letter-spacing: 0em;
    text-align: left;
    color: #666666;
}

.book-panel__text--small{
    font-family: Noto Sans TC;
    font-size: 16px;
    font-weight: 500;
    line-height: 13px;
    letter-spacing: 0em;
    text-align: left;
    color: #666666;
}

/*============*/
/*  book-panel
/*============*/
.book-panel__title{
    height: 27px;

    padding-top: 40px;

    display: flex;
    align-items:center;
    justify-content:center;
}

.book-panel__title--other{
    padding-left: 10px;
    padding-right: 10px;
    box-sizing: border-box;
}

.book-panel__group{
    padding-top: 20px;
    padding-bottom: 40px;
    padding-left: 10px;
    padding-right: 10px;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    row-gap: 15px;

    box-sizing: border-box;
}

.book-panel__group--setting-gap{
    column-gap: 40px;
}

.book-panel__group-delete-icon{
    width: 30px;
    height: 30px;

    position: absolute;
    top: 0;
    right: 0;
    
    background-image: url("../figure/button/delete.png");
    cursor: pointer;
}
.book-panel__group-delete-icon:hover{
    box-shadow: 0 3px 5px rgba(104, 104, 104, 0.8);
}

.book-panel__group-attraction{
    padding-top: 10px;
    display: flex;
    flex-wrap: wrap;
    position: relative;
}

.group-attraction__image-box{
    height: 200px;
}

.group-attraction__image{
    width: 100%;
    height: 200px;

    object-fit: cover;
    object-position: center center;
}

.group-attraction__info-box{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    row-gap: 10px;
}

.info-box__title{
    margin-bottom: 10px;
    font-family: Noto Sans TC;
    font-size: 16px;
    font-weight: 700;
    line-height: 13px;
    letter-spacing: 0em;
    text-align: left;
    color: #448899;
}

.info-box__row{
    word-break: break-all;
    word-wrap: break-word;
    display: flex;
    align-items:center;
}

.book-panel__input-row{
    width: 100%;
    height: 38px;

    display: flex;
    align-items:center;
    justify-content:left;
    text-align: left;
}

.book-panel__input-box{
    width: 200px;
    height: 38px;
    border-radius: 5px;
    border: 1px;
    gap: 4px;
    border: 1px solid #E8E8E8;
}

.book-panel__price-row{
    position: absolute;
    right: 10px;
}

.book-panel__button{
    width: 173px;
    height: 36px;

    padding: 10px 20px 10px 20px;
    border: 0;
    border-radius: 5px;
    background-color: #448899;
    color: #FFFFFF;
    cursor: pointer;

    font-family: Noto Sans TC;
    font-size: 19px;
    font-weight: 400;
    line-height: 16px;
    letter-spacing: 0em;
    text-align: center;
}
.book-panel__button:hover{
    box-shadow: 0 3px 5px rgba(104, 104, 104, 0.8);
}

@media (min-width: 1200px){
    .main{
        margin: auto;
        width: 1200px;
    }
    .book-panel__title--top{
        width: 1000px;
    }
    .book-panel__title--other{
        width: 1000px;
    }
    .book-panel__group{
        margin: auto;
        width: 1000px;
    }
    .group-attraction__image-box{
        width: 250px;
    }
}

@media (min-width: 1000px) and (max-width: 1200px){
    .main{
        width: 100%;
    }
    .book-panel__title--top{
        width: 1000px;
    }
    .book-panel__title--other{
        width: 1000px;
    }
    .book-panel__group{
        margin: auto;
        width: 1000px;
    }
    .group-attraction__image-box{
        width: 250px;
    }
}

@media (min-width: 360px) and (max-width: 1000px){
    .main{
        width: 100%;
    }
    .book-panel__title--top{
        width: 100%;
        padding-left: 10px;
    }
    .book-panel__title--other{
        width: 100%;
    }
    .book-panel__group{
        width: 100%;
    }
    .group-attraction__image-box{
        width: 100%;
    }
    .book-panel__group-delete-icon{
        top: initial;
        bottom: 0;
    }
    #book-notice{
        line-height: 27.13px;
    }
}

@media (max-width: 360px){
    .main{
        width: 100%;
    }
    .book-panel__title--top{
        width: 100%;
        padding-left: 10px;
    }
    .book-panel__title--other{
        width: 100%;
    }
    .book-panel__group{
        width: 100%;
    }
    .group-attraction__image-box{
        width: 100%;
    }
    .book-panel__group-delete-icon{
        top: initial;
        bottom: 0;
    }
    #book-notice{
        line-height: 27.13px;
    }
}

